--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     </header>
     <main>
         <h1>Rodrigo Shinechi Quena Calizaya | WDD 130</h1>
-        <img src="/images/profile.webp" alt='Hello, my name is Rodrigo Quena' with '200'>
+        <img src="/images/profile.webp" alt="Hello, my name is Rodrigo Quena" width "200">
         <p>Hello! My name is Rodrigo Quena and I'm from Cochabamba, Bolivia. I enjoy playing sports like soccer and
             swing. Also, I like to travel and meet new people</p>
     </main>
