--- a/index.html
+++ b/index.html
@@ -5,7 +5,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Rodrigo Shinechi Quena Calizaya | WDD 130</title>
-<link rel="stylesheet" href="styles/styles.css"
+    
+    <meta name="description" content="This is my own page, my name Rodrigo Quena. I'm in the web fundamentals course. This page it's abaut myself">
+    <meta name="author" content="Rodrigo Quena">
+    
+    <link rel="stylesheet" href="styles/styles.css"
 </head>
 
 <body>
@@ -22,6 +26,11 @@
         <p>Hello! My name is Rodrigo Quena and I'm from Cochabamba, Bolivia. I enjoy playing sports like soccer and
             swing. Also, I like to travel and meet new people</p>
     </main>
+    <aside>
+        <h2>Bolivia</h2>
+        <img src="./images/isla-del-sol.jpg" alt="Bolivia landscape">
+        <p>This is an awesome contry with alot of beautiful and marvelous places to visit. People here are kind and happy always ready to give a hand and a warm hag to visitors</p>
+    </aside>
     <footer>
         <p>©2024 | Rodrigo Quena | Cochabamba, Bolivia</p>
     </footer>
