--- a/wwr/site-plan-rafting.html
+++ b/wwr/site-plan-rafting.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <title>Rafting Site Plan | Xavier Rodriquez</title>
     <meta name="description" content="The rafting site plan includes the site purpose, the target audience, branding information, and a style guide for the course website project.">
-    <meta name="author" content="Xavier Rodriquez">
+    <meta name="author" content="Rodrigo Quena">
     <link rel="stylesheet" href="styles/site-plan-rafting.css">
   </head>
     <body>
