--- a/index.html
+++ b/index.html
@@ -5,11 +5,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Rodrigo Shinechi Quena Calizaya | WDD 130</title>
-    
-    <meta name="description" content="This is my own page, my name Rodrigo Quena. I'm in the web fundamentals course. This page it's abaut myself">
+
+    <meta name="description"
+        content="This is my own page, my name Rodrigo Quena. I'm in the web fundamentals course. This page it's abaut myself">
     <meta name="author" content="Rodrigo Quena">
-    
-    <link rel="stylesheet" href="styles/styles.css"
+
+    <link rel="stylesheet" href="/week02/styles/styles.css">
 </head>
 
 <body>
@@ -18,19 +19,47 @@
             <a href="#">Home</a>
             <a href="wwr">Rafting Site</a>
             <a href="wwr/site-plan-rafting.html">Rafting Site Plan</a>
+            <a href=" https://linkedin.com ">Linkedin</a>
+            <a href="https://facebook.com">Facebook</a>
         </nav>
     </header>
-    <main>
-        <h1>Rodrigo Shinechi Quena Calizaya | WDD 130</h1>
-        <img src="/images/profile.webp" alt="Hello, my name is Rodrigo Quena" width="200">
-        <p>Hello! My name is Rodrigo Quena and I'm from Cochabamba, Bolivia. I enjoy playing sports like soccer and
-            swing. Also, I like to travel and meet new people</p>
-    </main>
-    <aside>
-        <h2>Bolivia</h2>
-        <img src="./images/isla-del-sol.jpg" alt="Bolivia landscape">
-        <p>This is an awesome contry with alot of beautiful and marvelous places to visit. People here are kind and happy always ready to give a hand and a warm hag to visitors</p>
-    </aside>
+    <div class="grid">
+        <main>
+            <h1>Rodrigo Shinechi Quena Calizaya | WDD 130</h1>
+            <img src="/images/profile.webp" alt="Hello, my name is Rodrigo Quena" width="200">
+            <p>Hello! My name is Rodrigo Quena and I'm from Cochabamba, Bolivia. I enjoy playing sports like soccer and
+                swing. Also, I like to travel and meet new people. I'm a member of the church since I was 8 years old, I
+                have serveed in a full time mission in Colombia barranquilla.
+                I enjoy learning new skills and ues it to help others. I'm studying Systems Engineer im a Universtity
+                here in my country,I'm about to finish, so I decided to
+                start my studies in BYU-Pathway. I really like programing and create solutions to everyday living
+                problems. One of my biggest dream is to get a PhD Degree in the technology area.
+                I want to be part of the revolution of technology. </p>
+            <ul class="box">
+                <li><a href="https://www.churchofjesuschrist.org/temples/details/cochabamba-bolivia-temple?lang=eng"
+                        target="_blank">Cochabamba Bolivia Temple</a>
+                </li>
+                <li><a href="https://www.churchofjesuschrist.org/temples/details/bogota-colombia-temple?lang=eng"
+                        target="_blank">Bogota Colombia Temple</a>
+                </li>
+                <li><a href="https://www.churchofjesuschrist.org/temples/details/barranquilla-colombia-temple?lang=eng"
+                        target="_blank">Barranquilla Colombia Temple</a>
+                </li>
+                <li><a href="https://www.churchofjesuschrist.org/temples/details/rexburg-idaho-temple?lang=eng"
+                    target="_blank">Rexburg Idaho Temple</a>
+            </li>
+
+            </ul>
+        </main>
+        <aside>
+            <h2>Bolivia, Cochabamba</h2>
+            <img src="./images/cristo-de-la-concordia-1.jpg" alt="Bolivia landscape">
+            <p>This is an awesome contry with alot of beautiful and marvelous places to visit. People here are kind and
+                happy always ready to give a hand and a warm hag to visitors. Cochabamba has a really good food,
+                visitors here have the oportunity to try a lot of different kind of foot.</p>
+        </aside>
+
+    </div>
     <footer>
         <p>©2024 | Rodrigo Quena | Cochabamba, Bolivia</p>
     </footer>
