--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         content="This is my own page, my name Rodrigo Quena. I'm in the web fundamentals course. This page it's abaut myself">
     <meta name="author" content="Rodrigo Quena">
 
-    <link rel="stylesheet" href="/week02/styles/styles.css">
+    <link rel="stylesheet" href="styles/styles.css">
 </head>
 
 <body>
