--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <header>
         <nav>
             <a href="#">Home</a>
-            <a href="wwr">Rafting Site</a>
+            <a href="wwr/about.html">Rafting Site</a>
             <a href="wwr/site-plan-rafting.html">Rafting Site Plan</a>
             <a href=" https://linkedin.com ">Linkedin</a>
             <a href="https://facebook.com">Facebook</a>
