some error fixed

--- a/wwr/about.html
+++ b/wwr/about.html
@@ -5,6 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>About Us | Rafting Company</title>
+    <meta name="description" content="This page is about a Rafting Company">
+    <meta name="author" content="Rodrigo Quena">
     <link rel="stylesheet" href="styles/rafting.css">
 </head>
 
