some changes  made

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 
     </div>
     <footer>
-        <p>©2024 | Rodrigo Quena | Cochabamba, Bolivia</p>
+        <p>©2024 💻| Rodrigo Quena |💻 Cochabamba, Bolivia</p>
     </footer>
 </body>
 
