complete the second part of about part

--- a/wwr/about.html
+++ b/wwr/about.html
@@ -26,7 +26,8 @@
             <img src="images/hero-image.png" alt="Rafting Adventure" class="hero-image">
             <h1>Rafting Company</h1>
             <article>
-                <p>Our mission is to provide the best rafting experience to everyone who enjoys discovering new experiences and adventures.
+                <p>Our mission is to provide the best rafting experience to everyone who enjoys discovering new
+                    experiences and adventures.
                     we porvide all you need to hace the best experiences in your life with the nature.
                 </p>
                 <img src="images/happy-client.png" alt="Happy Client" class="client-image">
@@ -34,35 +35,67 @@
 
         </div>
 
-        
+
 
         <section>
             <h2>History</h2>
-            <p>Our company was founded in...</p>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+            <div class="center">
+                <p>Founded in 1995, Rapids Adventures began as a small, family-owned business with a passion for the
+                    great outdoors and a love for the exhilarating sport of white water rafting. Our journey started on
+                    the pristine rivers of Colorado, where our founders, John and Sarah Rivers, saw an opportunity to
+                    share their adventurous spirit with others. John, a seasoned rafting guide with years of experience
+                    navigating the world’s most challenging rapids, met Sarah, an environmentalist and outdoor
+                    enthusiast, on a rafting trip down the River.</p>
+                <div>
+                    <img src="images/centro.jpg" alt="Rafting" class="center-image">
+                </div>
+                <p>In our early years, we operated with just a handful of rafts and a dedicated team of friends and
+                    family. Despite our modest beginnings, our commitment to safety, adventure, and customer
+                    satisfaction quickly earned us a loyal following. Word of mouth spread, and Rapids Adventures began
+                    to grow, attracting thrill-seekers from all over the country.
 
+                    By the early 2000s, our reputation had solidified, and we expanded our operations to include
+                    multi-day expeditions, family-friendly trips, and specialized tours that catered to both novice
+                    rafters and seasoned adventurers.</p>
+            </div>
         </section>
 
         <section>
             <h2>Adventure Awaits You!</h2>
-            <img src="images/adventure1.png" alt="Rafting Adventure 1">
-            <h3>Rapids</h3>
-            <img src="images/adventure2.png" alt="Rafting Adventure 2">
-            <h3>Colorado River</h3>
-            <img src="images/adventure3.png" alt="Rafting Adventure 3">
-            <h3>Bear River</h3>
-            <img src="images/adventure4.png" alt="Rafting Adventure 4">
-            <h3>Smokey Rever</h3>
-            <img src="images/adventure5.png" alt="Rafting Adventure 5">
-            <h3>Boise River</h3>
+            <div class="list">
+                <figure>
+                    <img src="images/adventure1.png" alt="Rafting Adventure 1">
+                    <figcaption>Rapids</figcaption>
+                </figure>
+                <figure>
+                    <img src="images/adventure2.png" alt="Rafting Adventure 2">
+                    <figcaption>Colorado River</figcaption>
+                </figure>
+                <figure>
+                    <img src="images/adventure3.jpg" alt="Rafting Adventure 3">
+                    <figcaption>Bear River</figcaption>
+                </figure>
+                <figure>
+                    <img src="images/adventure4.jpg" alt="Rafting Adventure 4">
+                    <figcaption>Smokey Rever</figcaption>
+                </figure>
+                <figure>
+                    <img src="images/adventure5.jpg" alt="Rafting Adventure 5">
+                    <figcaption>Boise River</figcaption>
+                </figure>
+            </div>
         </section>
     </main>
 
     <footer>
-        <p>&copy; 2024 | Rafting Company | Rodrigo Quena</p>
-        <a href="#"><img src="images/facebook.png" alt="Social Media 1"></a>
-        <a href="#"><img src="images/twitter.png" alt="Social Media 2"></a>
-        <a href="#"><img src="images/youtube.png" alt="Social Media 3"></a>
+        <div class="text">
+            <p>&copy; 2024 | Rafting Company | Rodrigo Quena</p>
+        </div>
+        <div class="icon">
+            <a href="#"><img src="images/facebook.png" alt="Social Media 1"></a>
+            <a href="#"><img src="images/twitter.png" alt="Social Media 2"></a>
+            <a href="#"><img src="images/youtube.png" alt="Social Media 3"></a>
+        </div>
     </footer>
 </body>
 
