--- a/quiz.html
+++ b/quiz.html
@@ -31,7 +31,7 @@
                     <option value="" selected disabled>Choose One ...</option>
                     <option value="h1">&lt;/*&gt;</option>
                     <option value="h2">&lt;#&gt;</option>
-                    <option value="h3">&lt;<! --&gt;</option>
+                    <option value="h3">&lt;$&gt;</option>
                 </select>
             </div>
             <div class="form-group">
