More errors fixed

--- a/wwr/contact.html
+++ b/wwr/contact.html
@@ -40,7 +40,7 @@
                 <div class="map">
                     <iframe
                         src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d15234.164273681092!2d-66.21335910308842!3d-17.337678359348313!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1ses-419!2sbo!4v1720890756796!5m2!1ses-419!2sbo"
-                        cswidth="800" height="450" style="border:0;" allowfullscreen="" loading="lazy"
+                        allowfullscreen="" loading="lazy"
                         referrerpolicy="no-referrer-when-downgrade"></iframe>
                 </div>
             </div>
