--- a/wwr/contact.html
+++ b/wwr/contact.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Contact Us - Rafting</title>
-    <meta name="description" content="Contact White Water Rafting for inquiries, reservations, or website suggestions.">
+    <meta name="description" content="Contact Rafting for inquiries, reservations, or website suggestions.">
     <meta name="author" content="Rodrigo Quena">
     <link rel="stylesheet" href="styles/rafting.css">
 </head>
