--- a/wwr/contact.html
+++ b/wwr/contact.html
@@ -97,7 +97,7 @@
     <footer>
         <div class="text">
             <p>&copy; 2024 | Rafting Company | Rodrigo Quena</p>
-            <a href="https://app.moqups.com/z5Pa0YfXcqz07qolkWzJFNbPlDHQ61xC/view/page/ad64222d5">Contact Us wireframe </a>
+            <a href="https://app.moqups.com/z5Pa0YfXcqz07qolkWzJFNbPlDHQ61xC/view/page/ad64222d5">Contact Us Wireframe </a>
         </div>
         <div class="icon">
             <a href="#"><img src="images/facebook.png" alt="Social Media 1"></a>
