--- a/wwr/trips.html
+++ b/wwr/trips.html
@@ -94,7 +94,7 @@
     <footer>
         <div class="text">
             <p>&copy; 2024 | Rafting Company | Rodrigo Quena</p>
-            <a href="https://app.moqups.com/z5Pa0YfXcqz07qolkWzJFNbPlDHQ61xC/view/page/ad64222d5">Contact Us wireframe
+            <a href="https://app.moqups.com/z5Pa0YfXcqz07qolkWzJFNbPlDHQ61xC/view/page/a81a70107">Trips wireframe
             </a>
         </div>
         <div class="icon">
