--- a/wwr/index.html
+++ b/wwr/index.html
@@ -1,12 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Home | White Water Rafting</title>
     <link rel="stylesheet" href="styles/rafting.css">
-    <meta name="description" content="Experience the thrill of white water rafting with our expert guides and top-notch equipment. Sign up for our newsletter to stay updated on our latest trips and offers.">
+    <meta name="description"
+        content="Experience the thrill of white water rafting with our expert guides and top-notch equipment. Sign up for our newsletter to stay updated on our latest trips and offers.">
 </head>
+
 <body>
     <header>
         <img src="images/Rapids_logo2.jpg" alt="Rafting Company Logo">
@@ -24,17 +27,23 @@
         </section>
         <section class="newsletter">
             <h2>Stay Updated</h2>
-            <form action="#" method="post" class="newsletter-form">
-                <label for="name">Name:</label>
-                <input type="text" id="name" name="name" required>
-                <label for="email">Email:</label>
-                <input type="email" id="email" name="email" required>
-                <button type="submit">Sign Up</button>
-            </form>
+            <div class="information">
+                <form action="#" method="post" class="newsletter-form">
+                    <label for="name">Name:</label>
+                    <input type="text" id="name" name="name" required>
+                    <label for="email">Email:</label>
+                    <input type="email" id="email" name="email" required>
+                    <button type="submit">Sign Up</button>
+                </form>
+                <img src="images/offering2.jpg" alt="Offering 2">
+            </div>
         </section>
         <section class="call-to-action">
             <h2>Ready for an Adventure?</h2>
-            <p><a href="trips.html">Explore Our Trips</a></p>
+            <div class="information">
+                <p><a href="trips.html">Explore Our Trips</a></p>
+                <img src="images/offering1.jpg" alt="Offering 1">
+            </div>
         </section>
         <section class="offerings">
             <h2>Our Offerings</h2>
@@ -49,11 +58,11 @@
                 </div>
             </div>
         </section>
-    </main> 
+    </main>
     <footer>
         <div class="text">
             <p>&copy; 2024 | Rafting Company | Rodrigo Quena</p>
-            <a href="https://app.moqups.com/z5Pa0YfXcqz07qolkWzJFNbPlDHQ61xC/view/page/ad64222d5">Contact Us wireframe
+            <a href="https://app.moqups.com/z5Pa0YfXcqz07qolkWzJFNbPlDHQ61xC/view/page/a1a051f78">Home wireframe
             </a>
         </div>
         <div class="icon">
@@ -61,7 +70,7 @@
             <a href="#"><img src="images/twitter.png" alt="Social Media 2"></a>
             <a href="#"><img src="images/youtube.png" alt="Social Media 3"></a>
         </div>
-    </footer>   
-</body> 
+    </footer>
+</body>
+
 </html>
- 
