--- a/wwr/index.html
+++ b/wwr/index.html
@@ -1,20 +1,20 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en-US">
 
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Home | White Water Rafting</title>
+    <meta name="description"content="Experience the thrill of white water rafting with our expert guides and top-notch equipment. Sign up for our newsletter to stay updated on our latest trips and offers.">
+    <meta name="author" content="Rodrigo Quena">
     <link rel="stylesheet" href="styles/rafting.css">
-    <meta name="description"
-        content="Experience the thrill of white water rafting with our expert guides and top-notch equipment. Sign up for our newsletter to stay updated on our latest trips and offers.">
 </head>
 
 <body>
     <header>
         <img src="images/Rapids_logo2.jpg" alt="Rafting Company Logo">
         <nav>
-            <a href="index.html">Home</a>
+            <a href="/">Home</a>
             <a href="about.html">About Us</a>
             <a href="trips.html">Trips</a>
             <a href="contact.html">Contact Us</a>
